[gd_scene load_steps=8 format=3 uid="uid://dhbiltafr6waa"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_63wl7"]
[ext_resource type="Texture2D" uid="uid://qx28ayijvvqf" path="res://Scenes/Player/Crosshair.png" id="3_2clf1"]
[ext_resource type="Script" path="res://Scenes/Player/Hand.gd" id="3_uwlef"]
[ext_resource type="PackedScene" uid="uid://buyqkn701spo6" path="res://Scenes/Weapons/rail_gun_new.tscn" id="4_x7ovm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5vu40"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6ur7r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gt8bv"]
size = Vector3(1, 0.335491, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01, 0)
collision_layer = 2
collision_mask = 37
script = ExtResource("1_63wl7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_5vu40")

[node name="Body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_6ur7r")

[node name="Feet" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.755759, 0)
shape = SubResource("BoxShape3D_gt8bv")

[node name="CamRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.492829, -0.358137)

[node name="Camera3D" type="Camera3D" parent="CamRoot"]

[node name="TextureRect" type="TextureRect" parent="CamRoot/Camera3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_2clf1")

[node name="AimCast" type="RayCast3D" parent="CamRoot/Camera3D"]
visible = false
target_position = Vector3(0, 0, -300)
collision_mask = 53

[node name="Hand" type="Node3D" parent="CamRoot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.225, -0.177, -0.416)
script = ExtResource("3_uwlef")
sway_left = Vector3(0, 0.05, 0)
sway_right = Vector3(0, -0.05, 0)

[node name="RailGun_new" parent="CamRoot/Camera3D/Hand" instance=ExtResource("4_x7ovm")]
